Plyr small devices + dialog scrollbar UI fix ♻️

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,11 +11,12 @@ body {
 
 ::-webkit-scrollbar {
     width: 3px;
+    height: 3px;
 }
   
 ::-webkit-scrollbar-track {
     background: transparent;
-    margin: 1rem 0;
+    margin: 1rem;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -661,8 +662,10 @@ button:active {
 
 @media only screen and (max-width: 600px) {
     .plyr {
-        height: 50vw;
         margin: 0;
+        width: 100%;
+        height: initial;
+        border-radius: initial;
     }
 
     .suggestions {
@@ -695,9 +698,6 @@ button:active {
 }
 
 @media only screen and (max-width: 450px) {
-    .plyr {
-        margin: 0;
-    }
 
     .title-img {
         width: 15rem;
